--- a/AuthenticationApi/appsettings.json
+++ b/AuthenticationApi/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "FinalProjConn": "server=(local);database=finalproj;integrated security=sspi;trustservercertificate=true"
+    "FinalProjConn": "server=(local);database=finalproj;integrated security=sspi;trustservercertificate=true",
+    "AZureDataBase": "Server=tcp:pctbankingdb.database.windows.net,1433;Initial Catalog=PCTBankingDatabase;Persist Security Info=False;User ID=GroubBDBAdmin;Password=Admin@groupBdb;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AppSettings": {
     "Appname": "UserRoleAuthAPI",
